--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div id="map"></div>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-    <script src="index.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div id="map" style="width: 100vw; height: 100vh"></div>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru-RU"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
