--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="map" style="width: 100vw; height: 100vh"></div>
+  <div id="map"></div>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru-RU"></script>
   <script src="index.js"></script>
 </body>
